# spa

./: README.md
Team32/Code32/src/spa/: CMakeLists.txt
Team32/Code32/src/spa/src/: PKB.cpp  StatementParser.cpp  StatementParser.h
Team32/Code32/src/spa/src/PKB/: AssignPostFixTable.cpp  AssignPostFixTable.h  CFGBipTable.cpp  CFGBipTable.h  CFGTable.cpp  CFGTable.h  CallStmtTable.cpp  CallStmtTable.h  CallTable.cpp  CallTable.h  ConstantTable.cpp  ConstantTable.h  FollowTable.cpp  FollowTable.h  IfControlTable.cpp  IfControlTable.h  ModifyTable.cpp  ModifyTable.h  NextBipTable.cpp  NextBipTable.h  NextTable.cpp  NextTable.h  ParentTable.cpp  ParentTable.h  ProcTable.cpp  ProcTable.h  Table.h  TypePreDefine.h  TypeToStmtNumTable.cpp  TypeToStmtNumTable.h  UseTable.cpp  UseTable.h  VarTable.cpp  VarTable.h  WhileControlTable.cpp  WhileControlTable.h
Team32/Code32/src/spa/src/QueryProcessor/: DesignEntity.h
Team32/Code32/src/spa/src/QueryProcessor/PkbAbstraction/: PkbAbstractor.cpp  PkbAbstractor.h
Team32/Code32/src/spa/src/QueryProcessor/QueryEvaluator/: QueryEvaluator.cpp  QueryEvaluator.h  (+1 more)
Team32/Code32/src/spa/src/SourceProcessor/: DesignExtractor.cpp  Parser.cpp
Team32/Code32/src/spa/src/Tokenizer/: PqlTokenizer.cpp  PqlTokenizer.h  SimpleTokenizer.cpp  SimpleTokenizer.h
Team32/Code32/src/spa/src/Utils/: GraphUtils.cpp  GraphUtils.h  ParserUtils.cpp  ParserUtils.h  StmtType.h  TestUtils.cpp  TestUtils.h
Team32/Code32/src/spa/src/pql/: AttributeType.h  DesignEntity.h  QueryProcessorManager.cpp  QueryProcessorManager.h  QueryResult.cpp  QueryResult.h
(+366 files in other folders)
